fix: Add extra space above the play again button

--- a/css/main.css
+++ b/css/main.css
@@ -303,6 +303,7 @@ body {
     width: 150px;
     height: 50px;
     padding: 10px;
+    margin-top: 20px;
     text-align: center;
     background-color: #01B500;
     border-radius: 4px;
